--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,11 +55,5 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "files.associations": {
-    "*.ejs": "html",
-    "string": "cpp",
-    "random": "cpp",
-    "iostream": "cpp"
-  }
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
