--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,8 @@
     "*.ejs": "html",
     "array": "cpp",
     "string": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "random": "cpp",
+    "limits": "cpp"
   }
 }
