--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,12 @@
     "string": "cpp",
     "vector": "cpp",
     "random": "cpp",
-    "limits": "cpp"
+    "limits": "cpp",
+    "bitset": "cpp",
+    "initializer_list": "cpp",
+    "regex": "cpp",
+    "utility": "cpp",
+    "valarray": "cpp",
+    "iostream": "cpp"
   }
 }
