--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,13 @@
     "regex": "cpp",
     "utility": "cpp",
     "valarray": "cpp",
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "*.tcc": "cpp",
+    "deque": "cpp",
+    "list": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "ratio": "cpp",
+    "chrono": "cpp"
   }
 }
