--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
     "unordered_map": "cpp",
     "unordered_set": "cpp",
     "ratio": "cpp",
-    "chrono": "cpp"
+    "chrono": "cpp",
+    "forward_list": "cpp"
   }
 }
